2003-02-26  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* AutoResponse.py (AutoResponse.create): Sort ADDED_HEADERS_SERVER
	before adding them to the message.

2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Message.py: New module.

2003-02-13  Mark Horn  <mark@hornclan.com>
	
	* Defaults.py: Added ACTION_HEADER_INCOMING to enable the logfile
	stuff to get written in a header message.

2003-01-30  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Deliver.py (Deliver.__deliver_mbox): The UUCP-style From_ line's
	timestamp is now based on localtime() instead of gmtime().

2003-01-29  Tim Legant  <tim@catseye.net>

	* FilterStore.py (FlatFileStore.__init__): Added code to lowercase
	the list of email addresses.

	* Util.py (findmatch): Fix bug where the for loop just kept going,
	regardless of whether a match was found or not.

2003-01-28  Tim Legant  <tim@catseye.net>

	* FilterStore.py: New file.  Part of FilterParser.firstmatch
	cleanup patch from Jonathan Ellis.

	* FilterParser.py (FilterParser.firstmatch): Massive cleanup of
	the ever-lengthening firstmatch method.  Now uses the classes from
	FilterStore where possible.  Part of FilterParser.firstmatch
	cleanup patch from Jonathan Ellis.

	* Util.py: Move CDB and DBM-building functions to appropriate
	classes in FilterStore.  Part of FilterParser.firstmatch cleanup
	patch from Jonathan Ellis.

	(findmatch): Return only true or false.  We no longer support an
	action override in flat files or databases.  Part of the
	FilterParser.firstmatch cleanup patch from Jonathan Ellis.

2003-01-27  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Deliver.py (Deliver.__deliver_maildir): Strengthen the
	uniqueness of maildir filenames based on djb's updated maildir
	spec.
	
2003-01-20  Tim Legant  <tim@catseye.net>

	* MTA.py (MTA.getvdomainprepend): Added this method to abstract
	ancestor.  It raises NotImplementedError if called.
